fix: scroll and overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@
     font-size: var(--fontSize-body-4);
     font-weight: var(--weight-regular);
     line-height: var(--lineHeight-5);
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
     min-height: 100vh;
   }
@@ -158,7 +158,7 @@
     overflow: hidden;
   }
   
-  ::-webkit-scrollbar {
+  /* ::-webkit-scrollbar {
     width: 5px;
   }
   
@@ -168,7 +168,7 @@
   
   ::-webkit-scrollbar-thumb {
      background-color: var(--gold-crayola );
-  }
+  } */
   
   /*-----------------------------------*\
     #TYPOGRAPHY
@@ -396,9 +396,6 @@
   
   
   @media (min-width: 1500px) {
-    body {
-      max-height: 100vh;
-    }
   }
   
   @media (max-width: 1200px) {}
